FreeST/test/Programs/InvalidTests/Kinding/WrongLeastUpperBound/WrongLeastUpperBound.fst
-- *T ⊔ 1S = 1T
f : (Int, !Int) -> ()
f _ = ()